[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation = "https://docs.rs/heap-bytes"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "heap-bytes"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]

[dependencies]
newtype-tools.workspace = true
# heap-bytes-derive = { workspace = true, optional = true }

[dev-dependencies]
# heap-bytes-derive.workspace = true
# rstest.workspace = true
# rustversion.workspace = true
# serde.workspace = true
# trybuild.workspace = true

# [features]
# default = ["derive"]
# derive = ["dep:heap-bytes-derive"]
